hphp/hack/test/typecheck/inout/pseudofunction_with_signature.php.exp
ERROR: File "pseudofunction_with_signature.php", line 8, characters 15-22:
Unexpected `inout` annotation for argument (Typing[4183])
  File "Shapes.hhi", line 42, characters 19-24:
  This is a normal parameter (does not have `inout`)
ERROR: File "pseudofunction_with_signature.php", line 9, characters 28-30:
No class constant `T` in `dict` (Typing[4090])
  File "hackarray.hhi", line 32, characters 24-27:
  Declaration of `dict` is here
ERROR: File "pseudofunction_with_signature.php", line 10, characters 16-23:
Unexpected `inout` annotation for argument (Typing[4183])
  File "printf.hhi", line 48, characters 40-41:
  This is a normal parameter (does not have `inout`)
ERROR: File "pseudofunction_with_signature.php", line 11, characters 11-18:
Unexpected `inout` annotation for argument (Typing[4183])
  File "stdlib/builtins_variable.hhi", line 35, characters 35-38:
  This is a normal parameter (does not have `inout`)
ERROR: File "pseudofunction_with_signature.php", line 12, characters 19-26:
Unexpected `inout` annotation for argument (Typing[4183])
  File "functions.hhi", line 57, characters 40-43:
  This is a normal parameter (does not have `inout`)
